--- a/desktop/package.json
+++ b/desktop/package.json
@@ -25,7 +25,8 @@
     "@electron-toolkit/utils": "^4.0.0",
     "axios": "^1.10.0",
     "electron-updater": "^6.3.9",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
